[package]
name = "budgey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde
serde_json = "1.0.113"
serde = { version = "1.0", features = ["derive"] }

# anyhow results
anyhow = "1.0.79"

# clap for cli
clap = {version = "4.5.1", features = ["derive"] }
chrono = "0.4.34"
