[package]
name = "budgey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serde
serde_json = "1.0.115"
serde = { version = "1.0.197", features = ["derive"] }

# anyhow results
anyhow = "1.0.82"

# clap for cli
clap = {version = "4.5.4", features = ["derive"] }
chrono = "0.4.37"

# Logging
log = "0.4.21"
simple_logger = "4.3.3"

# nanoid 
nanoid = "0.4.0"

# thiserror
thiserror = "1.0.58"

# Cli colors
colored = "2.1.0"
